fix overflow problem

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -39,11 +39,7 @@ button {
 body {
   font-family: $font-primary; 
   position: relative;
-  
-  // section {
-  //   @include threeColumnGrid;
-    
-  // }
+  overflow-x: hidden;
 }
 
 
